# fxtrade

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
archive/fxtrade/: api.py  brownian.py  chart.py  code.py  fx.py  history.py  logger.py  period.py  pseudo.py  stock.py  stocks.py  timeseries.py  utils.py
archive/fxtrade/algorithm/: template.py  tenet.py
archive/tests/: test_api.py  test_logger.py  test_period.py  test_stock.py  test_trade.py  test_utils.py  test_wallet.py
archive/tests/data/: cryptowatch_response.pkl
archive/tests/data/emulator/BTC-JPY/10y-1d/: 2014.csv  2015.csv  2016.csv  2018.csv  2019.csv  2020.csv  2022.csv
archive/tests/data/emulator/BTC-JPY/1mo-15m/: 2022-05.csv  2022-06.csv
archive/tests/data/emulator/BTC-JPY/5d-1m/: 2022-06-08.csv  2022-06-09.csv  2022-06-12.csv  2022-06-13.csv  2022-06-14.csv  2022-06-15.csv  2022-06-16.csv  2022-06-17.csv  2022-06-18.csv  2022-06-19.csv  2022-06-20.csv  2022-06-21.csv  2022-06-22.csv  2022-06-23.csv  2022-06-24.csv  2022-06-25.csv  2022-06-26.csv  2022-06-27.csv  2022-06-28.csv  2022-06-29.csv  2022-06-30.csv  2022-07-01.csv  2022-07-02.csv  2022-07-21.csv  2022-07-23.csv  (+1 more)
archive/tests/interface/: test_cryptowatch.py  test_yfinance.py
doc/: Makefile
doc/source/: index.rst
docs/: fxtrade.algorithm.html  fxtrade.interface.html  index.html  modules.html  objects.inv  search.html  tests.html
docs/_modules/fxtrade/: api.html  chart.html  dirmap.html  emulator.html  fx.html  stock.html  trade.html  trader.html
docs/_modules/fxtrade/interface/: bitflyer.html
docs/_sources/: modules.rst.txt
docs/_sources/modules/: fxtrade.algorithm.rst.txt  fxtrade.interface.rst.txt
docs/_static/: bizstyle.js  documentation_options.js
docs/modules/: fxtrade.algorithm.html  fxtrade.html  modules.html
docs/source/: conf.py
docs/source/modules/: fxtrade.rst  modules.rst
examples/: bitflyer.py
fxtrade/: analysis.py  api.py  bitflyer.py  chart.py  const.py  core.py  dirmap.py  emulator.py  fx.py  helper.py  history.py  keyhold.py  logger.py  math.py  safeattr.py  stock.py  stocks.py  ticker.py  timeseries.py  trade.py  trader.py  utils.py  wallet.py  yfinance.py
fxtrade/algorithm/: baseline.py  tenet.py
fxtrade/interface/: bitflyer.py  bitflyer_utils.py  cryptowatch.py  yfinance.py
notebooks/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  brownian.ipynb  fx.ipynb  fx_test.ipynb  fxbook.ipynb  fxemu.ipynb  fxfx.ipynb  fxtrade.ipynb  plotly.ipynb  sample_trade.ipynb
tests/: test_api.py  test_chart.py  test_code.py  test_core.py  test_emulator.py  test_fx.py  test_history.py  test_stock.py  test_timeseries.py  test_trade.py  test_trader.py  test_wallet.py
tests/data/: response.pickle
tests/data/dummy/: 2023-04.csv
tests/data/emulator/BTC-JPY/10y-1d/: 2017.csv  2021.csv
tests/data/emulator/BTC-JPY/1mo-15m/: 2022-07.csv
tests/data/emulator/BTC-JPY/5d-1m/: 2022-06-06.csv  2022-06-07.csv  2022-06-10.csv  2022-06-11.csv  2022-07-05.csv  2022-07-22.csv  2022-07-24.csv
tests/interface/: test_bitflyer.py  test_cryptowatch.py  test_yfinance.py
